kubernetes/main-site.yaml
#@ load("@ytt:data", "data")

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
spec:
  replicas: #@ int(data.values.replica_count)
  selector:
    matchLabels:
      app: #@ data.values.name
  template:
    metadata:
      labels:
        app: #@ data.values.name
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: #@ data.values.name
        image: #@ "{}:{}".format(data.values.image_name, data.values.image_tag)
        ports:
        - containerPort: #@ int(data.values.container_port)
        resources:
          limits:
            memory: #@ data.values.container_memory
            cpu: #@ data.values.container_cpu

---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: #@ int(data.values.service_port)
    targetPort: #@ int(data.values.container_port)
  selector:
    app: #@ data.values.name

#@ if/end data.values.hostname:
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
spec:
  virtualhost:
    fqdn: #@ data.values.hostname
    tls:
      secretName: #@ data.values.tls_secret
  routes:
  - conditions:
    - prefix: /
    enableWebsockets: true
    services:
    - name: #@ data.values.name
      port: #@ int(data.values.service_port)
